compiling_error.txt
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\emptyingbaltic.cpp: In function 'int main()':
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\emptyingbaltic.cpp:51:37: error: cannot convert 'int (*)[w][2]' to 'int***' for argument '3' to 'int addaround(int, int, int***, std::priority_queue<std::vector<int> >)'
   addaround(i-1, j-1, baltic, around);
                                     ^
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\emptyingbaltic.cpp:54:49: error: invalid conversion from 'void*' to 'int***' [-fpermissive]
     addaround(around.top()[1], around.top()[1], &&baltic, around);
                                                 ^~~~~~~~
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\emptyingbaltic.cpp:9:5: note:   initializing argument 3 of 'int addaround(int, int, int***, std::priority_queue<std::vector<int> >)'
 int addaround(int startx, int starty, int** baltic[2], priority_queue<vector<int>> around)
     ^~~~~~~~~
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\emptyingbaltic.cpp:54:51: error: label 'baltic' used but not defined
     addaround(around.top()[1], around.top()[1], &&baltic, around);
                                                   ^~~~~~
